--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <img class="logo" src="./img/Cópia de Logo Ricardo Novais Fundo Escuro.png" alt="Logo Ricardo Novais">
+
     <div class="fundo">
-<!--         <img src="./img/Cópia de Logo Ricardo Novais Fundo Escuro.png" alt="" class="logo">
- -->        <div class="calculadora">
+        <div class="calculadora">
             <p id="resultado"></p>
             <table class="teclado">
                 <tr>
