--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="div-1">
+    
     <img class="logo" src="./img/Cópia de Logo Ricardo Novais Fundo Escuro.png" alt="Logo Ricardo Novais">
+</div>
 
     <div class="fundo">
         <div class="calculadora">
