responsivo css e html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                     <td><button id="one" class="botao">1</button></td>
                     <td><button id="two" class="botao">2</button></td>
                     <td><button id="three" class="botao">3</button></td>
-                    <td rowspan="2"><button id="equal" style="height: 106px" class="botao">=</button></td>
+                    <td rowspan="2"><button id="equal" class="botao">=</button></td>
+                    <!-- style="height: 106px"  -->
                 </tr>
                 <tr>
                     <td><button id="zero" class="botao">0</button></td>
